added btn-success class to search form button

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 					<form action="GET" class="form-inline my-2">
 						<input type="search" placeholder="Search" aria-label="Search" class="form-control mr-sm-2">
-						<button class="btn btn-outline-primary my-2" type="submit">Search</button>
+						<button class="btn btn-success my-2" type="submit">Search</button>
 					</form>
         
       </nav>
 			<div class="jumbotron">
 				<div class="container">
-					<h2 class="display-4">Featured Content</h2>
+					<h2 class="display-3">Featured Content</h2>
 					<p>This is a modified jumbotron.</p>
 					<button type="button" class="btn btn-primary btn-lg">More Info</button>
 				</div>
@@ -56,17 +56,17 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<h3>Project</h3>
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p>Project Summary. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 						<button class="btn btn-secondary">View</button>
 					</div>
 					<div class="col-sm-4">
 						<h3>Project</h3>
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p>Project Summary. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 						<button class="btn btn-secondary">View</button>
 					</div>
 					<div class="col-sm-4">
 						<h3>Project</h3>
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p>Project Summary. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 						<button class="btn btn-secondary">View</button>
 					</div>
 				</div>
