--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
       </nav>
 			<div class="jumbotron">
-				<div class="container">
+				<div class="container col-6 offset-3 text-center">
 					<h2 class="display-3">Featured Content</h2>
 					<p>This is a modified jumbotron.</p>
 					<button type="button" class="btn btn-primary btn-lg">More Info</button>
@@ -52,7 +52,7 @@
 			</div>
     </header> 
 		<main>
-			<div class="container">
+			<div class="container text-center">
 				<div class="row">
 					<div class="col-sm-4">
 						<h3>Project</h3>
@@ -74,7 +74,7 @@
 			</div>
 			
 		<footer class="container border-top mt-4">
-			<p class="p-2">© Copyright 2021</p>
+			<p class="p-2 text-center">© Copyright 2021</p>
 		</footer>
     </div>
 </body>
